<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFBFC"
    android:orientation="vertical" >

    <include
        layout="@layout/udbsdk_title_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        
        <TextView 
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#888888"
            android:text="@string/yyudb_txt_phone"
            android:textSize="21sp" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
             >

            <EditText
                android:id="@+id/edit_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/udbsdk_edittext"
                android:hint="@string/yyudb_hedit_verify"
                android:inputType="phone"
                android:textSize="21sp" 
                android:layout_weight="1"
                />
            
            <TextView
                android:paddingLeft="10dp"
                android:id = "@+id/txt_resend_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="18sp" 
                android:textColor="#57B2E9"
                android:text="@string/yyudb_txt_resend"
                />
        </LinearLayout>
        
        <EditText
            android:id="@+id/edit_new_pwd"
	        android:layout_marginTop="10sp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:hint="@string/yyudb_hedit_new_pwd"
	        android:background="@drawable/udbsdk_edittext"
	        android:textSize="21sp"/>
    
    	<Button 
    		android:id="@+id/bt_done"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/yyudb_bt_done"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            android:background="@drawable/udbsdk_entrance_btn_bg"/>
        
		
    </LinearLayout>

    


</LinearLayout>