<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFBFC"
    android:orientation="vertical"
     >

    <include
        layout="@layout/udbsdk_title_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_uname_parent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/udbsdk_edittext"
            >
            
            <EditText
                android:id="@+id/edit_uname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/yyudb_hedit_uname"
                android:textSize="21sp" 
                android:background="@null"
                android:layout_weight="1"
                android:inputType="text|textNoSuggestions|textEmailAddress"
                />
            
            <ImageView
                android:id="@+id/img_uname_dropdown"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="center"
                android:src="@drawable/udbsdk_btn_dropdown"
                 />

        </LinearLayout>

    	<EditText
    	    android:id="@+id/edit_pwd"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="10dp"
    	    android:background="@drawable/udbsdk_edittext"
    	    android:hint="@string/yyudb_hedit_pwd"
    	    android:inputType="textPassword"
    	    android:textSize="21sp" />
    
    	<RelativeLayout
    	    android:id="@+id/layout_chk_remember_parent"
    	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        	android:layout_marginTop="10dp" >
        	 
    	    <CheckBox
            android:id="@+id/chk_remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yyudb_chk_remember_pwd"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#666666"
            android:button="@drawable/udbsdk_checkbox"
            android:textSize="21sp" />

    	    <TextView
    	        android:id="@+id/txt_chpwd"
    	        android:layout_alignParentRight="true"
    	        android:layout_centerVertical="true"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/yyudb_bt_chpwd"
    	        android:textColor="#57B2E9"
    	        android:textSize="21sp" />

    	</RelativeLayout>
    	
    	<LinearLayout
    	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        	android:layout_marginTop="10dp" >
    	    
    		<Button 
    		android:id="@+id/bt_reg"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/yyudb_bt_reg"
            android:textColor="#666666"
            android:textSize="20sp"
            android:background="@drawable/udbsdk_entrance_btn_bg_gray"/>
    		
    		<Button 
    		android:id="@+id/bt_login"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:text="@string/yyudb_bt_login"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/udbsdk_entrance_btn_bg"/>
        </LinearLayout>
		
    </LinearLayout>

    


</LinearLayout>